# texas-odds

./: Cargo.toml  README.md
site/: index.html  package.json  pnpm-lock.yaml  vite.config.js
site/src/: App.vue  calc.ts  parseCard.ts
site/src/components/: GitHub.vue
src/: lib.rs  main.rs  texas.rs  win_rate.rs
texas-odds/: Cargo.toml
texas-odds/benches/: bench.rs
texas-odds/src/: lib.rs  main.rs  odds.rs  texas.rs
wasm/: .appveyor.yml  .gitignore  .npmignore  Cargo.toml  LICENSE_MIT  package.json
wasm/example/: package.json  pnpm-lock.yaml  texas.test.ts
wasm/src/: lib.rs
