[package]
name = "texas-odds"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.4", features = ["derive"] }
heapless = "0.7.16"
statistical = "1.0.0"
wasm-bindgen = { version = "0.2.63", optional = true }

[features]
wasm = ["wasm-bindgen"]
